# rust_playground

./: Cargo.toml  README.md
.github/workflows/: microservices.yml
bootcamp/: Cargo.toml  README.md
bootcamp/microservices/: Cargo.toml  Dockerfile-auth  Dockerfile-health  README.md  bacon.toml  docker-compose.yaml
bootcamp/microservices/.github/workflows/: prod.yml
bootcamp/microservices/src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
bootcamp/microservices/src/client/: main.rs
bootcamp/microservices/src/health-check-service/: main.rs
bootcamp/src/: main.rs
bootcamp/stackoverflow/: .env  Cargo.toml  README.md
bootcamp/stackoverflow/src/: lib.rs  main.rs  models.rs
bootcamp/stackoverflow/src/handlers/: handlers_inner.rs  mod.rs
bootcamp/stackoverflow/src/persistance/: answers_dao.rs  questions_dao.rs  tests.rs
concurrency/: README.md
concurrency/src/: arc.rs  main.rs  spinlock.rs
macros/: Cargo.toml
macros/src/: lib.rs  main.rs
miscellaneous/src/: extension_pattern.rs  higher_ranked_trait_bounds.rs  main.rs  type_state_pattern.rs
specialization/: Cargo.toml
specialization/src/: autoderef.rs  autoref.rs  main.rs
