[package]
name = "stackoverflow"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
axum-test = "17.2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
async-trait = "0.1"
thiserror = "2.0"
